updated surfing to jpg

--- a/_posts/2023-10-13-somepost1.md
+++ b/_posts/2023-10-13-somepost1.md
@@ -5,7 +5,7 @@ date: 2023-10-05 08:00:00 -0500
 categories: homelab
 tags: Mac apple Thunderbolt mac-studio NVMe xmac-studio sonnet
 image:
- path: /assets/img/surfing.PNG
+ path: /assets/img/surfing.jpg
 ---
 
 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Do you want the best settings for OBS in 2020? This is the ultimate OBS settings guide with the BEST OBS settings for streaming Fortnite, Just Chatting APEX Legends, PUBG, or really ANY game.
