--- a/_posts/2023-10-13-somepost1.md
+++ b/_posts/2023-10-13-somepost1.md
@@ -8,7 +8,7 @@ image:
  path: /assets/img/surfing.jpg
 ---
 
-Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Do you want the best settings for OBS in 2020? This is the ultimate OBS settings guide with the BEST OBS settings for streaming Fortnite, Just Chatting APEX Legends, PUBG, or really ANY game.
+Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Do you want the best settings for OBS in 2020? This is the ultimate OBS settings guide with the BEST OBS settings for streaming Fortnite, Just Chatting APEX Legends, PUBG, or really ANY game.
 
 I debated buying a new Mac due to its limited options for expandability. This all changed when I found a way to not only rackmount my Mac, but add PCIe slots to add additional components like NVMe SSDs, video capture cards, dual 10 gig networking, and even testing a video card.
 
